--- a/Pixel_Web_Project-main/Pixel/product.css
+++ b/Pixel_Web_Project-main/Pixel/product.css
@@ -156,3 +156,179 @@ img {
 .add-to-cart:hover {
     background-color: #0056b3;
 }
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+:root{
+    --var--white:#fdfaf2ef;
+    --var--backround:#6d70c7;
+    --var--one:#a39eff;
+    --var--twice:#3f467f;
+    --var--third:#1b213f;
+    --var--fourth:#000007;
+    
+}
+
+*{
+    box-sizing:border-box;
+    margin: 0; 
+    padding:0 ;
+    list-style: none;
+	text-decoration: none;
+}
+
+body{
+    margin:auto;
+    padding:20px;
+    font-family: "Pixelify Sans", sans-serif;
+    font-size: 20px;
+    line-height: 1.5;
+    color:var(--var--fourth);
+    background-color:var(--var--third);
+}
+
+.container{ 
+   color: var(--var--white);
+    background-color:var(--var--backround) ; 
+    border-radius:20px;
+    padding:20px;
+    display:flex;
+    flex-direction: row;
+    justify-content:space-between; 
+    align-items:baseline;
+    position:relative;
+   
+}
+
+.list ul { 
+    width:400px;
+    display:flex;
+    align-items:baseline;
+    justify-content:space-between;
+}
+
+nav a {
+    color:var(--var--white);
+}
+nav a:hover{
+    color:var(--var--twice);
+}
+
+ul {
+    list-style:none;
+}
+
+#sform{
+    position:relative;
+}
+
+.src .search{
+    background-color:var(--var--white);
+    border: 0;
+    font-size:16px;
+    padding: 15px;
+    border-radius: 30px;
+    height: 50px;
+    width: 50px;
+    transition: width 0.3s ease;
+   
+}
+.btn {
+    background-color:rgb(90,93,144);
+    color:var(--var--white);
+    border: 0;
+    border-radius:30px;
+    cursor: pointer;
+    font-size: 24px;
+    position:absolute;
+    top: 0;
+    right:0;
+    height: 50px;
+    width: 50px;
+    transition: transform 0.4s ease;
+ 
+}
+
+.btn:focus
+.src:focus
+.sepet:focus{
+    outline: none;
+}
+
+.src.active .search{
+    width: 400px;
+}
+.src.active .buton{
+    transform: translateX(198px);
+}
+
+@media (max-width:900px){
+    .container {
+       display:flex;
+       flex-direction:column;
+       align-items:center;
+       justify-content:space-evenly;
+    }
+
+    ul{
+        padding:15px;
+    }
+}
+
+.shp {
+    border: 1px solid var(--var--fourth);
+    border-radius: 5px;
+    padding: 16px;
+    width:600px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    background-color: var(--var--backround);
+}
+
+#product-name {
+    padding:10px;
+    font-size: 30px;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+#product-image {
+    width: 100%;
+    height: auto;
+    margin-bottom: 8px;
+    border-radius: 8px;
+}
+
+#product-price {
+    padding:5px;
+    font-size: 25px;
+    margin-bottom: 8px;
+    color: var(--var--third);
+}
+
+#product-description {
+    padding:10px;
+    font-size: 20px;
+    color: var(--var--white);
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.add-to-cart {
+    background-color:var(--var--third);
+    color: white;
+    border: none;
+    width:auto;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.add-to-cart:hover {
+    background-color: var(--var--fourth);
+    color:var(--var--one);
+    transform: scale(0.95);
+}
