--- a/Pixel_Web_Project-main/PixelClient/accountinfo.css
+++ b/Pixel_Web_Project-main/PixelClient/accountinfo.css
@@ -16,7 +16,11 @@
     list-style: none;
 	text-decoration: none;
 }
+#warn{
+    color : red;
+    text-align: center;
 
+}
 body{
     background:#000007;
     background: linear-gradient(0deg, #a39eff 0%, #000007 90%);
@@ -26,6 +30,7 @@ body{
     font-size: 20px;
     line-height: 1.5;
     color:var(--var--fourth);
+    background-color:var(--var--third);
 }
 
 .container{ 
@@ -50,6 +55,7 @@ body{
 
 nav a {
     color:var(--var--white);
+    transition: color 0.5s ease;
 }
 nav a:hover{
     color:var(--var--twice);
@@ -104,138 +110,100 @@ ul {
 }
 
 
-.account{
-    margin: 50px auto;
-    padding: 30px;
-    width: 80%;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color:var(--var--twice);
+section{
+    background-color:var(--var--bkr);
     color: var(--var--white);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.header {
-    margin-bottom: 30px;
-}
- 
-h1{
-    padding: 10px;;
-    
-}
-
-p strong{
-    color:var(--var--fourth);
-}
-
-p{
-    padding: 10px;
-    font-size: 28px;
-}
-
-.actions {
     display: flex;
+    margin:0;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
+    overflow: hidden;
 }
 
-.Sbtn {
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 10px;
-    text-decoration: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+.form{
+    background-color: rgba(0,0,0,0.4);
+    padding: 20px 40px;
+    border-radius: 10px;
 }
 
-
-
-
-
-.Sbtn-danger {
-    color: #fff;
-    background-color: steelblue;
-    border: 1px solid steelblue;
-    
-}
-.Sbtn:hover {
-    opacity: 0.8;
-    transform: scale(0.96);
-}
-
-
-.order-history {
-    font-size: 16px;
-    margin-bottom: 30px;
-    border-top: 2px solid var(--var--fourth);
-    color: var(--var--white);
-    padding-top: 20px;
-}
-
-.order-history h1{
-    color: var(--var--fourth);
-    font-size: 38px;
+.form h1{
     text-align: center;
-    padding: 20px;
+    margin-bottom:30px ;
 }
 
-.order {
-    display: flex;
-    align-items: center;
-    border: 1px solid var(--var--third);
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
-    background-color: var(--var--twice);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.form a{
+    text-decoration: none;
+    color:var(--var--third);
 }
 
-.order:last-child {
-    margin-bottom: 0;
-}
-
-.order img {
-    width: 10%;
-    margin-right: 20px;
-    border-radius: 5px;
+.formbtn{
     cursor: pointer;
-}
-
-.order p{
-    font-size: 26px;
-}
-.order-details {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex: 1;
-}
-
-.status {
-    font-size: 24px;
     display: inline-block;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-weight: bold;
-    text-transform: uppercase;
+    width: 100%;
+    color:var(--var-white);
+    background-color: var(--var--third);
+    padding: 15px;
+    font-family: inherit;
+    font-size: 20px;
+    border: 0;
+    border-radius: 8px;
 }
 
-.status.preparing {
-    background-color: #ffc107;
-    color: #000;
+.formbtn:focus{
+    outline: 0;
 }
 
-.status.delivered {
-    background-color: #28a745;
-    color: var(--var--white);
+.formbtn:active{
+    color:var(--var--twice);
+    transform: scale(0.97);
 }
 
-.status.cancelled {
-    background-color: #dc3545;
-    color: var(--var--white);
+.text{
+     margin-top: 30px;
+}
+
+.form-control{
+    position: relative;
+    margin: 20px 0 40px;
+    width: 100%;
+}
+
+.form-control input{
+    background-color:  transparent;
+    border:0;
+    border-bottom: 2px #fff solid;
+    display: black;
+    width:100%;
+    padding: 15px 0;
+    font-size: 18px;
+    color: #fff;
+}
+
+.form-control input:focus, 
+.form-control input:valid{
+    outline: 0;
+    border-bottom-color:var(--var--one);
+}
+
+.form-control label{
+    position: absolute;
+    top: 15px;
+    left:0;
+}
+
+.form-control label span{
+    display: inline-block;
+    font-size: 18px;
+    min-width: 5px;
+   transition: 0.3s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+
+.form-control input:focus + label span,
+.form-control input:valid + label span{
+    color:var(--var--one);
+    transform: translateY(-30px);
 }
 
 @media (max-width:900px){
