--- a/Pixel_Web_Project-main/PixelClient/accountinfo.css
+++ b/Pixel_Web_Project-main/PixelClient/accountinfo.css
@@ -16,10 +16,40 @@
     list-style: none;
 	text-decoration: none;
 }
-#warn{
-    color : red;
+#warn {
+    background: #db6161;
+    color: #fff;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    opacity: 0.9;
+    border-radius: 5px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: fadeInOut 5s ease-out forwards;
+}
 
+@keyframes fadeInOut {
+    0% {
+        opacity: 0;
+        transform: translate(-50%, -60%);
+    }
+    20% {
+        opacity: 0.9;
+        transform: translate(-50%, -50%);
+    }
+    80% {
+        opacity: 0.9;
+        transform: translate(-50%, -50%);
+    }
+    100% {
+        opacity: 0;
+        transform: translate(-50%, -40%);
+    }
 }
 body{
     background:#000007;
