--- a/Pixel_Web_Project-main/PixelClient/navbar.css
+++ b/Pixel_Web_Project-main/PixelClient/navbar.css
@@ -46,12 +46,13 @@ body{
     display:flex;
     align-items:baseline;
     justify-content:space-between;
+    cursor: pointer;
 }
 
 nav a {
     color:var(--var--white);
 }
-nav a:hover{
+nav a:hover {
     color:var(--var--twice);
 }
 
@@ -81,12 +82,68 @@ ul {
     border-radius:30px;
     cursor: pointer;
     font-size: 24px;
-    position:absolute;
     top: 0;
     right:0;
     height: 50px;
     width: 50px;
-    transition: transform 0.4s ease;
+}
+
+.categories-container {
+    position: relative;
+    margin-top: 20px;
+}
+
+.category-header {
+    font-size: 26px;
+    cursor: pointer;
+    background-color: var(--var--backround);
+    padding: 10px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--var--white);
+    letter-spacing: 1px;
+}
+
+.category-list {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 5px;
+    padding: 10px;
+    z-index: 1000;
+    max-height: 200px;
+    overflow-y: auto;
+    width: 200px; /* Kategoriler genişliği */
+}
+
+.category {
+    padding: 10px;
+    background-color: var(--var--third);
+    border-radius: 5px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.category-title {
+    margin: 0;
+    color: var(--var--white);
+}
+
+.category:hover {
+    background-color: var(--var--twice);
+}
+
+
+.category-header i {
+    transition: transform 0.3s;
+}
+
+.category-header.open i {
+    transform: rotate(180deg);
 }
 
 .btn:focus
@@ -95,20 +152,13 @@ ul {
     outline: none;
 }
 
-.src.active .search{
-    width: 400px;
-}
-.src.active .buton{
-    transform: translateX(198px);
-}
-
 main{
     display: flex;
     flex-wrap: wrap;
 }
 
 .product{
-    width:250px;
+    height: 250px;
     margin: 1rem;
     background-color: var(--var--backround);
     box-shadow: 0 4px 5px rgba(0,0,0,0.2);
@@ -117,58 +167,13 @@ main{
     border-radius: 3px;
     transition: transform 0.3s;
 }
-.category {
-    color:var(--var--white);
- transition: transform 0.5s ease;
- cursor: pointer;
-}
-.category :hover 
-{   
-    color:var(--var--twice);
-}
+
 .product:hover{
     transform: scale(1.1);
 }
 
 .product img{
     width: 100%;
-}
-
-.product-info{
-    color: #eee;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 0.2rem;
-    padding: 0.5rem 1rem 1rem;
-    letter-spacing: 0.5px;
-}
-
-.product-info h3{
-    margin-top: 0;
-}
-
-.product-info span{
-    background-color: var(--var--background);
-    font-family:san-serif;
-    padding: 0.25rem 0.5rem;
-    border-radius: 3px;
-}
-
-.overview{
-    background-color:var(--var--white);
-    padding: 2rem;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    max-height: 80%;
-    transform: translateY(101%);
-    transition: transform 0.3s ease-in;
-}
-
-.product:hover .overview{
-    transform: translateY(0);
 }
 
 main a {
