--- a/Pixel_Web_Project-main/PixelClient/main.css
+++ b/Pixel_Web_Project-main/PixelClient/main.css
@@ -56,7 +56,57 @@ nav a {
 nav a:hover{
     color:var(--var--twice);
 }
-
+#success {
+    background: green;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    opacity: 0.9;
+    border-radius: 5px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: fadeInOut 5s ease-out forwards;
+    z-index: 100;
+}
+#warn {
+    background: #db6161;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    opacity: 0.9;
+    border-radius: 5px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: fadeInOut 5s ease-out forwards;
+}
+@keyframes fadeInOut {
+    0% {
+        opacity: 0;
+        transform: translate(-50%, -60%);
+    }
+    20% {
+        opacity: 0.9;
+        transform: translate(-50%, -50%);
+    }
+    80% {
+        opacity: 0.9;
+        transform: translate(-50%, -50%);
+    }
+    100% {
+        opacity: 0;
+        transform: translate(-50%, -40%);
+    }
+}
 ul {
     list-style:none;
 }
