--- a/Pixel_Web_Project-main/PixelClient/cart.css
+++ b/Pixel_Web_Project-main/PixelClient/cart.css
@@ -17,7 +17,22 @@
 	text-decoration: none;
   
 }
-
+#warn {
+  background: #db6161;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  opacity: 0.9;
+  border-radius: 5px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: fadeInOut 5s ease-out forwards;
+}
 body{
     margin:auto;
     padding:20px;
