--- a/Pixel_Web_Project-main/PixelClient/main.css
+++ b/Pixel_Web_Project-main/PixelClient/main.css
@@ -162,7 +162,8 @@ main{
 }
 
 .product{
-    width:250px;
+    width: 300px;
+    height: 250px;
     margin: 1rem;
     background-color: var(--var--backround);
     box-shadow: 0 4px 5px rgba(0,0,0,0.2);
@@ -176,8 +177,10 @@ main{
     transform: scale(1.1);
 }
 
-.product img{
-    width: 100%;
+.product h3 , span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 main a {
