--- a/Pixel_Web_Project-main/PixelClient/navbar.css
+++ b/Pixel_Web_Project-main/PixelClient/navbar.css
@@ -151,14 +151,14 @@ ul {
 .sepet:focus{
     outline: none;
 }
-
+ 
 main{
     display: flex;
     flex-wrap: wrap;
 }
 
 .product{
-    height: 250px;
+    height: 350px;
     margin: 1rem;
     background-color: var(--var--backround);
     box-shadow: 0 4px 5px rgba(0,0,0,0.2);
@@ -168,12 +168,17 @@ main{
     transition: transform 0.3s;
 }
 
+
+
 .product:hover{
     transform: scale(1.1);
 }
 
 .product img{
-    width: 100%;
+  width: 100%;
+  height: 50%;
+  object-fit : scale-down;
+  
 }
 
 main a {
